--- a/config/database.yml
+++ b/config/database.yml
@@ -19,14 +19,14 @@ default: &default
 
 development:
   <<: *default
-  database: furima_28425_development
+  database: furima-28425_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: furima_28425_test
+  database: furima-28425_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -49,6 +49,6 @@ test:
 #
 production:
   <<: *default
-  database: furima_28425_production
-  username: furima_28425
-  password: <%= ENV['FURIMA_28425_DATABASE_PASSWORD'] %>
+  database: furima-28425_production
+  username: furima-28425
+  password: <%= ENV['FURIMA-28425_DATABASE_PASSWORD'] %>
