--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "furima_28425",
+  "name": "furima-28425",
   "private": true,
   "dependencies": {
     "@rails/actioncable": "^6.0.0-alpha",
